# HaskellGame

./: .gitignore  HaskellGame.cabal  README.md  stack.yaml
Shaders/: fragment_shader.glsl  vertex_shader.glsl
app/: Client.hs  Server.hs
src/Common/: GMessages.hs  GObjects.hs  GTransform.hs  GTypes.hs
src/GCommon/: Geometry.hs
src/GCommon/Objects/: Objects.hs  PredefinedObjects.hs  Transforms.hs
src/GCommon/Types/: Generic.hs
src/GFunc/Client/: Setup.hs
src/GInput/: Client.hs
src/GLogger/: Client.hs  Server.hs
src/GMainLoop/: Client.hs  Server.hs
src/GMessages/: Client.hs  Common.hs  Server.hs
src/GMessages/Network/: ClientServer.hs  Converter.hs  ServerClient.hs
src/GNetwork/: Client.hs  Server.hs
src/GOpenGL/: Client.hs  Meshes.hs  PredefinedMeshes.hs
src/GServices/: Client.hs  Server.hs
src/GState/: Client.hs  Server.hs
