name:                HaskellGame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cernat-catalin/HaskellGame#readme
license:             BSD3
license-file:        LICENSE
author:              Cernat Catalin Stefan
maintainer:          cernat.catallin@gmail.com
copyright:           2017 Cernat Catalin Stefan
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Common.GObjects, Common.GTypes, Common.GTransform,
                       GMessages.Network.ClientServer, GMessages.Network.ServerClient, GMessages.Network.Converter
                       GMessages.Client, GMessages.Server,
                       GNetwork.Client, GNetwork.Server,
                       GState.Client, GState.Server,
                       GLogger.Client, GLogger.Server,
                       GMainLoop.Client, GMainLoop.Server,
                       GOpenGL.Client,
                       GInput.Client,
                       GServices.Client, GServices.Server
                       GFunc.Client.Setup
  build-depends:       base >= 4.7 && < 5,
                       network,
                       bytestring,
                       OpenGL,
                       GLFW-b,
                       stm,
                       cereal,
                       mtl,
                       async,
                       containers,
                       lens,
                       hslogger,
                       unix
  default-language:    Haskell2010

executable Server
  hs-source-dirs:      app
  main-is:             Server.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-orphans
  build-depends:       base,
                       HaskellGame,
                       network,
                       bytestring,
                       OpenGL,
                       GLFW-b,
                       stm,
                       cereal,
                       mtl,
                       async,
                       containers,
                       lens,
                       hslogger
  default-language:    Haskell2010

executable Client
  hs-source-dirs:      app
  main-is:             Client.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-orphans
  build-depends:       base,
                       HaskellGame,
                       network,
                       bytestring,
                       OpenGL,
                       GLFW-b,
                       stm,
                       cereal,
                       mtl,
                       async,
                       containers,
                       lens,
                       hslogger
  default-language:    Haskell2010

test-suite HaskellGame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       HaskellGame
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cernat-catalin/HaskellGame
